deinterlace: fix assigned method_id when using fallback

https://bugzilla.gnome.org/show_bug.cgi?id=642691